# snowflake-test

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yaml  pyproject.toml  requirements.txt  setup.py
src/snowflake_test/: query.py  settings.py
